# asr-evaluation

./: CLAUDE.md  app.py  config.py  evaluate.py  main.py  models.py  pyproject.toml  schemas.py  voxtral.py
results/models/: hviske_v2_synthetic_journals_20250907_163746.json  mock_v1_synthetic_journals_20250907_163653.json  voxtral_mini-3b-2507_synthetic_journals_20250907_171137.json  whisper_base_synthetic_journals_20250907_142922.json  whisper_base_synthetic_journals_20250907_163430.json  whisper_large-v2_synthetic_journals_20250907_163616.json  whisper_large-v3_synthetic_journals_20250907_163642.json  whisper_large_synthetic_journals_20250907_163545.json  whisper_medium_synthetic_journals_20250907_163510.json  whisper_small_synthetic_journals_20250907_163444.json  whisper_tiny_synthetic_journals_20250907_163422.json  whisper_turbo_synthetic_journals_20250907_163651.json
