[project]
name = "asr-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.6",
    "openai-whisper>=20250625",
    "pandas>=2.3.2",
    "soundfile>=0.13.1",
    "streamlit>=1.49.1",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]
